--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Daily Chores</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Submit</string>
+    <string name="pref_title">DEVELOPER</string>
+    <string name="action_settings">Preferences</string>
     <string name="title_activity_recycler_view_base">RecyclerViewBaseActivity</string>
     <string name="title_activity_new_chores">New Chores</string>
+    <string name="title_activity_preferences">Preferences</string>
 
 </resources>
